--- a/backend/package.json
+++ b/backend/package.json
@@ -21,7 +21,8 @@
     "imagekit": "^6.0.0",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
-    "mongoose": "^8.16.3"
+    "mongoose": "^8.16.3",
+    "pdfkit": "^0.17.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
