--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "express-rate-limit": "^8.1.0",
+    "html-to-text": "^9.0.5",
     "imagekit": "^6.0.0",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
